Fixing spacing problem on about cards on smaller screens

--- a/assets/css/3-pages/_frontpage.scss
+++ b/assets/css/3-pages/_frontpage.scss
@@ -33,6 +33,9 @@ section#about {
       @media (max-width: 360px) {
         margin: 10px 0;
       }
+      @media (max-width: 1200px) {
+        margin: 10px 0;
+      }
     }
   }
 }
